--- a/Projects/Project07/M3375_Proj07.ipynb
+++ b/Projects/Project07/M3375_Proj07.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "### MATH 3375 Project 7 - K-Means Clustering \n",
     "\n",
-    "For this project, we will use a data set with 38 features representing measures of sensors in an urban waste water treatment plant. There is no response variable. Therefore, this is an The objective is to **_classify_** the broad states of the treatment plant by _**clustering**_ similar data points together. Different clusters could then be analyzed to aid in predicting specific faults when future measures are recorded. \n",
+    "For this project, we will use a data set with 38 features representing measures of sensors in an urban waste water treatment plant. There is no response variable. Therefore, this is an **unsupervised** model. The objective is to **_classify_** the broad states of the treatment plant by _**clustering**_ similar data points together. Different clusters could then be analyzed to aid in predicting specific faults when future measures are recorded. \n",
     " \n",
     "\n",
     "Below is documentation related to the data set. \n",
